--- a/templates/students_overview.html
+++ b/templates/students_overview.html
@@ -9,7 +9,7 @@
 
 
 {% block content %}
-    <table class="table main-table" style="width: calc(100% - 280px);">
+    <table class="table main-table" style="width: calc(100% - 280px); float: left">
         <colgroup>
             <col>
             <col width="70px">
