--- a/cspcapp/static/student_detail_view.css
+++ b/cspcapp/static/student_detail_view.css
@@ -61,14 +61,11 @@
 }
 
 .passport-data-box {
-    width: 100%;
-    height: 100px;
+    height: 89px;
     background-color: #3b5998;
-    margin: 10px;
     padding: 10px;
     border: 1px solid grey;
     color: white;
-    display: inline-block;
 }
 
 .passport-data-box h1, h2, h3, h4, h5 {
@@ -80,7 +77,7 @@
     height: 100%;
     background-color: #3b5998;
     /*background-color: black;*/
-    margin: 10px;
+    /*margin: 5px;*/
     padding: 10px;
     border: 1px solid grey;
     color: white;
@@ -92,17 +89,66 @@
 }
 
 .one-field-data-box {
-    width: 40%;
-    height: 100%;
+    /*width: 40%;*/
+    height: 40px;
     background-color: #3b5998;
     /*background-color: black;*/
-    margin: 10px;
+    /*margin: 10px;*/
     padding: 10px;
     border: 1px solid grey;
     color: white;
-    display: inline-block;
+
 }
 
 .one-field-data-box h1, h2, h3, h4, h5 {
+    color: white;
+}
+
+.editing-field-container {
+    width: 100%;
+    overflow: auto;
+    margin-top: 5px;
+}
+
+.editing-field-container button {
+    width: 30px;
+    margin-left: 5px;
+}
+
+.editing-field-container div {
+    width: calc(100% - 37px);
+    float: left;
+}
+
+.non-editing-field-container {
+    width: 100%;
+    overflow: auto;
+    margin-top: 5px;
+}
+
+.non-editing-field-container div {
+    width: 100%;
+    float: left;
+}
+
+.long-button {
+    margin-top: 5px;
+    margin-left: 5px;
+    margin-right: 0;
+    background-color: #3b5998;
+    width: calc(25% - 7px);
+    height: 30px;
+}
+
+.address-data-box  {
+    height: 65px;
+    background-color: #3b5998;
+    padding: 10px;
+    border: 1px solid grey;
+    color: white;
+}
+
+.address-data-box
+ h1, h2, h3, h4, h5 {
     color: white;
 }
