ajax and other javscript start work

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,9 +11,10 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js">
-    <link href="{% static 'base.css' %}" rel="stylesheet">
-    <link href="{% static 'students_overview.css' %}" rel="stylesheet">
-    <link href="{% static 'student_detail_view.css' %}" rel="stylesheet">
+    <link href="{% static 'css/base.css' %}" rel="stylesheet">
+    <link href="{% static 'css/students_overview.css' %}" rel="stylesheet">
+    <link href="{% static 'css/student_detail_view.css' %}" rel="stylesheet">
+    <script src="{% static 'javascript/student_detail_view.js' %}"></script>
 </head>
 
 <body>
