--- a/templates/student_detail_view.html
+++ b/templates/student_detail_view.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
 
+
+
 {% block title %}
     <title>{{ object.studentPerson.initials }}</title>
 {% endblock %}
@@ -95,7 +97,7 @@
                             пн вт ср чт
                         </div>
                     </div>
-                        <button style="background-color: #3b5998; height: 60px;">
+                        <button style="background-color: #3b5998; height: 60px;" onclick="demo();">
                             <span class="glyphicon glyphicon-pencil"/>
                         </button>
                     </div>
@@ -119,38 +121,24 @@
                 <td>
 
                     <div class="editing-field-container">
-                        <div class="passport-data-box">
-                            <div style="display: inline-block; width: 32%;">
-                                {{ contract.student_document.person_surname_txt }}
-                            </div>
-                            <div style="display: inline-block; width: 32%;">
-                                {{ contract.student_document.person_name_txt }}
-                            </div>
-                            <div style="display: inline-block; width: 32%;">
-                                {{ contract.student_document.person_father_name_txt }}
-                            </div>
-                            <div style="display: inline-block; width: 98%;">
-                                {{ contract.student_document.authority_txt }}
-                            </div>
-                            <div style="display: inline-block; width: 23%;">
-                                {{ contract.student_document.document_type_txt }}
-                            </div>
-                            <div style="display: inline-block; width: 23%;">
-                                {{ contract.student_document.authority_no }}
-                            </div>
-                            <div style="display: inline-block; width: 23%;">
-                                {{ contract.student_document.issue_dt }}
-                            </div>
-                            <div style="display: inline-block; width: 30px;">
-                                {{ contract.student_document.document_series }}
-                            </div>
-                            <div style="display: inline-block; width: 80px;">
-                                {{ contract.student_document.document_no }}
-                            </div>
+                        <div class="passport-data-box" id="document_data_{{ contract.student_document.pk }}">
+                            {% csrf_token %}
+                            <input type="hidden" name="id" value="{{ contract.student_document.pk }}">
+                            <input type="text" name="person_surname_txt" value="{{ contract.student_document.person_surname_txt }}" style="background-color: #3b5998; border-width: 0; width: calc(33% - 2px)" readonly/>
+                            <input type="text" name="person_name_txt" value="{{ contract.student_document.person_name_txt }}" style="background-color: #3b5998; border-width: 0; width: calc(33% - 2px)" readonly/>
+                            <input type="text" name="person_father_name_txt" value="{{ contract.student_document.person_father_name_txt }}" style="background-color: #3b5998; border-width: 0; width: calc(33% - 2px)" readonly/>
+                            <input type="text" name="authority_txt" value="{{ contract.student_document.authority_txt }}" style="background-color: #3b5998; border-width: 0; width: 100%" readonly/>
+                            <input type="text" name="document_type_txt" value="{{ contract.student_document.document_type_txt }}" style="background-color: #3b5998; border-width: 0; width: calc(100% - 314px)" readonly/>
+                            <input type="text" name="authority_no" value="{{ contract.student_document.authority_no }}" style="background-color: #3b5998; border-width: 0; width: 90px" readonly/>
+                            <input type="text" name="issue_dt_day" value="{{ contract.student_document.issue_dt.day }}" style="background-color: #3b5998; border-width: 0; width: 16px; margin-left: 20px" readonly/>-
+                            <input type="text" name="issue_dt_month" value="{{ contract.student_document.issue_dt.month }}" style="background-color: #3b5998; border-width: 0; width: 16px" readonly/>-
+                            <input type="text" name="issue_dt_year" value="{{ contract.student_document.issue_dt.year }}" style="background-color: #3b5998; border-width: 0; width: 33px" readonly/>
+                            <input type="text" name="document_series" value="{{ contract.student_document.document_series }}" style="background-color: #3b5998; border-width: 0; width: 33px; margin-left: 20px" readonly/>
+                            <input type="text" name="document_no" value="{{ contract.student_document.document_no }}" style="background-color: #3b5998; border-width: 0; width: 50px" readonly/>
                         </div>
 
-                        <button style="background-color: #3b5998; height: 89px;">
-                            <span class="glyphicon glyphicon-pencil"/>
+                        <button style="background-color: #3b5998; height: 89px;" onclick="DocumentEditFunctions.enableEditDocumentMode({{ contract.student_document.pk }})" id="document_data_button_{{ contract.student_document.pk }}">
+                            <span class="glyphicon glyphicon-pencil" id="document_data_button_span_{{ contract.student_document.pk }}"/>
                         </button>
                     </div>
 
@@ -185,41 +173,26 @@
                 </td>
                 <td>
                     <div class="editing-field-container">
-                        <div class="passport-data-box">
-                            <div style="display: inline-block; width: 32%;">
-                                {{ contract.payer_document.person_surname_txt }}
-                            </div>
-                            <div style="display: inline-block; width: 32%;">
-                                {{ contract.payer_document.person_name_txt }}
-                            </div>
-                            <div style="display: inline-block; width: 32%;">
-                                {{ contract.payer_document.person_father_name_txt }}
-                            </div>
-                            <div style="display: inline-block; width: 98%;">
-                                {{ contract.payer_document.authority_txt }}
-                            </div>
-                            <div style="display: inline-block; width: 23%;">
-                                {{ contract.payer_document.document_type_txt }}
-                            </div>
-                            <div style="display: inline-block; width: 23%;">
-                                {{ contract.payer_document.authority_no }}
-                            </div>
-                            <div style="display: inline-block; width: 23%;">
-                                {{ contract.payer_document.issue_dt }}
-                            </div>
-                            <div style="display: inline-block; width: 30px;">
-                                {{ contract.payer_document.document_series }}
-                            </div>
-                            <div style="display: inline-block; width: 80px;">
-                                {{ contract.payer_document.document_no }}
-                            </div>
+                        <div class="passport-data-box" id="document_data_{{ contract.payer_document.pk }}">
+                            {% csrf_token %}
+                            <input type="hidden" name="id" value="{{ contract.payer_document.pk }}">
+                            <input type="text" name="person_surname_txt" value="{{ contract.payer_document.person_surname_txt }}" style="background-color: #3b5998; border-width: 0; width: calc(33% - 2px)" readonly/>
+                            <input type="text" name="person_name_txt" value="{{ contract.payer_document.person_name_txt }}" style="background-color: #3b5998; border-width: 0; width: calc(33% - 2px)" readonly/>
+                            <input type="text" name="person_father_name_txt" value="{{ contract.payer_document.person_father_name_txt }}" style="background-color: #3b5998; border-width: 0; width: calc(33% - 2px)" readonly/>
+                            <input type="text" name="authority_txt" value="{{ contract.payer_document.authority_txt }}" style="background-color: #3b5998; border-width: 0; width: 100%" readonly/>
+                            <input type="text" name="document_type_txt" value="{{ contract.payer_document.document_type_txt }}" style="background-color: #3b5998; border-width: 0; width: calc(100% - 314px)" readonly/>
+                            <input type="text" name="authority_no" value="{{ contract.payer_document.authority_no }}" style="background-color: #3b5998; border-width: 0; width: 90px" readonly/>
+                            <input type="text" name="issue_dt_day" value="{{ contract.payer_document.issue_dt.day }}" style="background-color: #3b5998; border-width: 0; width: 16px; margin-left: 20px" readonly/>-
+                            <input type="text" name="issue_dt_month" value="{{ contract.payer_document.issue_dt.month }}" style="background-color: #3b5998; border-width: 0; width: 16px" readonly/>-
+                            <input type="text" name="issue_dt_year" value="{{ contract.payer_document.issue_dt.year }}" style="background-color: #3b5998; border-width: 0; width: 33px" readonly/>
+                            <input type="text" name="document_series" value="{{ contract.payer_document.document_series }}" style="background-color: #3b5998; border-width: 0; width: 33px; margin-left: 20px" readonly/>
+                            <input type="text" name="document_no" value="{{ contract.payer_document.document_no }}" style="background-color: #3b5998; border-width: 0; width: 50px" readonly/>
                         </div>
 
                         <button style="background-color: #3b5998; height: 89px;">
                             <span class="glyphicon glyphicon-pencil"/>
                         </button>
                     </div>
-
 
                     <div class="editing-field-container">
                         <div class="address-data-box">
