--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,8 @@
     <link href="{% static 'css/base.css' %}" rel="stylesheet">
     <link href="{% static 'css/students_overview.css' %}" rel="stylesheet">
     <link href="{% static 'css/student_detail_view.css' %}" rel="stylesheet">
-    <script src="{% static 'javascript/student_detail_view.js' %}"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="{% static 'javascript/student_detail_view.js' %}" type="text/javascript"></script>
 </head>
 
 <body>
