--- a/cspcapp/static/css/student_detail_view.css
+++ b/cspcapp/static/css/student_detail_view.css
@@ -152,3 +152,11 @@
  h1, h2, h3, h4, h5 {
     color: white;
 }
+
+.contracts-table:disabled {
+    color: white;
+}
+
+input[type="text"]:disabled {
+  color: white;
+}
